refactor(user): чистая архитектура user + небольшой рефакторинг типов (pgtype)
