# internal/domain/entity/post.go
@@ -1,0 +1,12 @@
+package entity
+
+import (
+    "time"
+)
+
+type Post struct {
+    Id        int       `json:"id" db:"id"`
+    AuthorId  int       `json:"author_id" db:"author_id"`
+    Content   string    `json:"content" db:"content"`
+    CreatedAt time.Time `json:"created_at" db:"created_at"`
+}
